--- a/style.css
+++ b/style.css
@@ -1,49 +1,68 @@
 /* Our CSS file. */
-
 body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: sans-serif;
 }
-
-.flex-container,
+​ .container,
 .content {
   width: 100%;
   height: 100%;
 }
-.box-card {
-  padding: 70px;
-  background-color: #bbc9bf;
+.heading,
+.lower-para,
+.button {
+  text-align: left;
+  margin-left: 3%;
+}
+.main {
+  width: fit-content;
+  height: 100%;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  background-color: rgb(221, 220, 219);
 }
 .card {
+  width: 70%;
+  height: 400px;
+  border-radius: 1%;
+  margin-top: 3%;
+  padding-bottom: 50px;
+  background-color: rgb(255, 255, 255);
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
-  /* flex-direction: column; */
-  background-color: #95a697;
+  flex-direction: row;
+  justify-content: center;
 }
-.card_2 {
-  margin-top: 30px;
+.Tree {
+  width: 500px;
+  height: 450px;
+  border-radius: 1%;
+  background-color: rgb(115, 180, 115);
+}
+.content1 {
+  width: fit-content;
   display: flex;
-  /* flex-direction: column; */
-  background-color: #95a697;
+  flex-direction: column;
+  align-content: center;
+  padding: 25px;
+  padding-top: 100px;
 }
-
-.content_1 {
-  background-color: white;
-  padding: 30px;
+button {
+  width: 150px;
+  height: 60px;
+  border-radius: 999px;
+  color: whitesmoke;
+  background-color: rgb(115, 180, 115);
+  border: none;
 }
-.button {
-  color: black;
-  padding: 15px 32px;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
+.image1 {
+  position: relative;
+  bottom: 50px;
+  left: -25px;
 }
-.button1 {
-  background-color: #7be096;
-  border-radius: 40px;
-}
-.image img {
-  height: 300px;
-  width: 300px;
-  background-color: #7be096;
-  padding: 30px;
+.image2 {
+  position: relative;
+  top: 20px;
+  left: -15px;
 }
